--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-# GUTS will generate these files when building the mod pack
+*.MOD
+*.BIN*
+*.RAW
+*.MPP
 *.BINDAT
 *.BINLAYOUT
-*.MPP
-*.RAW
 
-# MOD NAH
-*.MOD
+# For some reason, the Torchlight I mod file format files comes in
+*.ADM
+*.CMP
